--- a/package.json
+++ b/package.json
@@ -6,13 +6,19 @@
   "scripts": {
     "start": "NODE_ENV=prod; node index.js",
     "dev": "NODE_ENV=dev; nodemon index.js",
-    "test": "jest"
+    "test": "NODE_ENV=test; jest"
   },
   "author": "Samuel Kwak <kwak123@gmail.com>",
   "license": "ISC",
+  "nodemonConfig": {
+    "ignore": [
+      "test/*"
+    ]
+  },
   "dependencies": {
     "@slack/client": "^4.8.0",
     "axios": "^0.18.0",
+    "bluebird": "^3.5.2",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "redis": "^2.8.0"
