--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-jest": "^22.1.2",
     "eslint-plugin-react": "^7.11.1",
     "jest": "^23.6.0",
+    "node-sass": "^4.11.0",
     "nodemon": "^1.18.5",
     "parcel-bundler": "^1.11.0"
   }
