--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   "dependencies": {
     "@slack/client": "^4.8.0",
     "axios": "^0.18.0",
+    "babel-jest": "^23.6.0",
     "bluebird": "^3.5.2",
     "body-parser": "^1.18.3",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "jest": "^23.6.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "redis": "^2.8.0"
@@ -32,15 +34,13 @@
     "@babel/plugin-proposal-class-properties": "^7.2.3",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
-    "babel-core": "^6.26.3",
+    "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.6.0",
     "eslint": "^5.8.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jest": "^22.1.2",
     "eslint-plugin-react": "^7.11.1",
-    "jest": "^23.6.0",
     "node-sass": "^4.11.0",
     "nodemon": "^1.18.5",
     "parcel-bundler": "^1.11.0"
