--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "jest": "^23.6.0",
+    "lodash": "^4.17.11",
+    "moment": "^2.23.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "redis": "^2.8.0"
