--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=prod; node index.js",
+    "build": "tsc",
     "dev": "NODE_ENV=dev; nodemon index.js",
     "test": "NODE_ENV=test; jest",
     "react-dev": "parcel watch client/index.html --out-dir dist"
@@ -36,6 +37,8 @@
     "@babel/plugin-proposal-class-properties": "^7.2.3",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
+    "@types/express": "^4.16.1",
+    "@types/node": "^11.13.5",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
@@ -45,6 +48,9 @@
     "eslint-plugin-react": "^7.11.1",
     "node-sass": "^4.11.0",
     "nodemon": "^1.18.5",
-    "parcel-bundler": "^1.11.0"
+    "parcel-bundler": "^1.11.0",
+    "tslint": "^5.16.0",
+    "tslint-config-airbnb": "^5.11.1",
+    "typescript": "^3.4.4"
   }
 }
