--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "onobot",
   "version": "0.0.1",
   "description": "Slack bot for Onomat things",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "NODE_ENV=prod; node index.js",
+    "start": "NODE_ENV=prod; node dist/index.js",
     "build": "tsc",
-    "dev": "NODE_ENV=dev; nodemon index.js",
+    "dev": "NODE_ENV=dev; nodemon dist/index.js",
     "test": "NODE_ENV=test; jest",
     "react-dev": "parcel watch client/index.html --out-dir dist"
   },
