--- a/package.json
+++ b/package.json
@@ -37,18 +37,22 @@
     "@babel/plugin-proposal-class-properties": "^7.2.3",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
+    "@types/bluebird": "^3.5.27",
     "@types/express": "^4.16.1",
     "@types/node": "^11.13.5",
+    "@types/redis": "^2.8.13",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jest": "^22.1.2",
+    "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.11.1",
     "node-sass": "^4.11.0",
     "nodemon": "^1.18.5",
     "parcel-bundler": "^1.11.0",
+    "sass": "^1.19.0",
     "tslint": "^5.16.0",
     "tslint-config-airbnb": "^5.11.1",
     "typescript": "^3.4.4"
